fixed the sizing of the disclaimer modal on mobile after adding the text above the checkbox

--- a/src/modules/modal/components/common/common.styles.less
+++ b/src/modules/modal/components/common/common.styles.less
@@ -582,8 +582,11 @@ div.ErrorField:focus {
     padding: 0.5rem 1rem;
   }
 
+  .ModalDisclaimer__helperText,
   .ModalDisclaimer__checkbox {
     > label {
+      font-size: @font-size-small;
+      line-height: @font-size-small;
       margin: 0 1.5rem;
     }
   }
